# blackjackpy

./: .gitignore  404.html  HowToMkDocs.md  README.md  index.html  memo.md  mkdocs.yml  objects.inv  pyproject.toml
blackjackpy/: __init__.py  index.html
docs/: blackjackpy.md  index.md
search/: search_index.json
src/blackjackpy/: blackjack.py
src/tests/: test_game.py
