[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = []
description = "Blackjack game"
license = {text = "Apache-2.0"}
name = "blackjackpy"
readme = "README.md"
requires-python = ">=3.12"
version = "0.2.1"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/blackjackpy"

[project.scripts]
blackjackpy = "blackjackpy:main"

[tool.uv]
dev-dependencies = [
  "more-itertools>=10.4.0",
  "pytest>=8.3.2",
]

[tool.mypy]
ignore_missing_imports = 1

[tool.ruff]
src = ["src"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
