[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = []
description = "Blackjack game"
license = {text = "Apache-2.0"}
name = "blackjackpy"
readme = "README.md"
requires-python = ">=3.12"
version = "0.2.6"

[project.urls]
docs = "https://saitotsutomu.github.io/blackjackpy/"
homepage = "https://github.com/SaitoTsutomu/blackjackpy"

[project.scripts]
blackjackpy = "blackjackpy:main"

[tool.uv]
dev-dependencies = [
  "more-itertools>=10.6.0",
  "pytest>=8.3.4",
]

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["ANN001", "ANN20", "CPY", "DOC201", "D203", "D213", "D400", "D415", "E501", "T201"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
