[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = []
description = "Blackjack game"
license = {text = "Apache-2.0"}
name = "blackjackpy"
readme = "README.md"
requires-python = ">=3.12"
version = "0.3.0"

[project.urls]
docs = "https://saitotsutomu.github.io/blackjackpy/"
homepage = "https://github.com/SaitoTsutomu/blackjackpy"

[project.scripts]
blackjackpy = "blackjackpy:main"

[dependency-groups]
dev = [
  "more-itertools>=10.8.0",
  "pytest>=9.0.2",
]

[tool.taskipy.tasks]
lint = "pyrefly check src && ruff check src"
pip-audit = "uv run -w pip-audit pip-audit"
test = "uv run pytest --disable-warnings"

[tool.uv]
exclude-newer = "3 days"

[[tool.uv.index]]
default = true
url = "https://pypi.flatt.tech/simple/"

[tool.pytest.ini_options]
norecursedirs = ["nbs"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = [
  "ANN401",
  "CPY",
  "D10",
  "D203",
  "D213",
  "D400",
  "D415",
  "DOC",
  "E501",
]
preview = true
select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"*/tests/*.py" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.5,<0.10.0"]
